<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/choose_option_background"
    tools:context=".Registration">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@color/actionbar"
        android:minHeight="?attr/actionBarSize"
        android:titleTextColor="@color/black"></android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="10">

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:orientation="horizontal"
                android:weightSum="1">

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"></View>

                <TextView
                    android:id="@+id/current"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:gravity="center"
                    android:text="@string/user"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/white" />

                <it.beppi.tristatetogglebutton_library.TriStateToggleButton
                    android:id="@+id/user_guard_toggle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="0.15"
                    app:tbIsMidSelectable="false" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.35"></View>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="horizontal"
                android:weightSum="1.5">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5">

                    <ImageView
                        android:id="@+id/pic"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="5dp"
                        android:src="@drawable/prof" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_weight="0.75"
                        android:text="@string/fullname"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/white" />

                    <EditText
                        android:id="@+id/fullname"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.75"
                        android:background="@drawable/textview_background"
                        android:hint="@string/fullname"
                        android:textAppearance="?android:textAppearanceMedium" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_weight="0.75"
                        android:text="@string/UserNAme"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/white" />

                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.75"
                        android:background="@drawable/textview_background"
                        android:hint="@string/UserNAme"
                        android:textAppearance="?android:textAppearanceMedium" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="7"
                android:orientation="vertical"
                android:weightSum="10">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.25"></View>

                <LinearLayout
                    android:id="@+id/status_layout"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.65"
                    android:visibility="gone"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.25"></View>

                    <TextView
                        android:id="@+id/status"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.25"
                        android:gravity="center"
                        android:text="@string/armed"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/white" />

                    <it.beppi.tristatetogglebutton_library.TriStateToggleButton
                        android:id="@+id/status_guard_toggle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="0.15"
                        app:tbIsMidSelectable="false" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.35"></View>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.75"
                    android:text="@string/email"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="0.75"
                    android:background="@drawable/textview_background"
                    android:hint="@string/email"
                    android:textAppearance="?android:textAppearanceMedium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.75"
                    android:text="@string/password"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/pass"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="0.75"
                    android:background="@drawable/textview_background"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textAppearance="?android:textAppearanceMedium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.75"
                    android:text="@string/confirm_password"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/confirmPass"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="0.75"
                    android:background="@drawable/textview_background"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:textAppearance="?android:textAppearanceMedium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="0.75"
                    android:text="@string/dob"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/white" />

                <com.ycuwq.datepicker.date.DatePicker
                    android:id="@+id/datePicker"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.6"></View>

                <Button
                    android:id="@+id/register_button"
                    android:layout_width="150dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:text="@string/register_action"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>